--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,9 +9,12 @@ authors = [
 requires-python = ">=3.10,<3.11"
 dependencies = [
     "click>=8.3.1",
+    "crypten",
     "gymnasium[box2d]>=1.2.2",
+    "scipy>=1.15.3",
     "seaborn>=0.13.2",
     "swig>=4.4.0",
+    "tqdm>=4.67.1",
 ]
 
 [project.scripts]
@@ -20,3 +23,6 @@ mpc2 = "mpc2:main"
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.uv.sources]
+crypten = { git = "https://github.com/aramuk/CrypTen.git" }
