--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "click>=8.3.1",
     "crypten",
     "gymnasium[box2d]>=1.2.2",
+    "omegaconf==2.0.6",
     "scipy>=1.15.3",
     "seaborn>=0.13.2",
     "swig>=4.4.0",
