prelim search implementation + revised tooling

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,9 @@ dependencies = [
     "click>=8.3.1",
     "crypten",
     "gymnasium[box2d]>=1.2.2",
+    "mpyc>=0.10",
     "omegaconf==2.0.6",
+    "scikit-learn>=1.7.2",
     "scipy>=1.15.3",
     "seaborn>=0.13.2",
     "swig>=4.4.0",
